--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dummy Webpage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body class="font-inter">
     <header>
         <nav>
             <div class="nav-image">
@@ -17,10 +24,30 @@
                 <li><a href="#">How It Works</a></li>
                 <li><a href="#">Why It's Different</a></li>
             </ul>
-            <div class="btn">
-                <button>Get Early Access</button>
+            <div>
+                <button class="btn">Get Early Access</button>
             </div>
         </nav>
+
+        <section id="hero-section">
+            <div class="hero-container">
+                <div class="hero-title">
+                    <div class="hero-heading">
+                        <h1 class="h1">Structured Thinking,</h1>
+                        <h1 class="h2">Not Just Note-Taking.</h1>
+                    </div>
+                    <div class="hero-para">
+                        <p>A private space to store notes, links, and learning summaries — designed to</p>
+                        <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                    </div>
+                </div>
+                <div class="hero-btn">
+                    <button class="btn">Start Building Your Vault</button>
+                    <button class="btn">See How It Works</button>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
+
 </html>
