Designed Hero Section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,9 +26,25 @@
                 <li><a href="#">Why It's Different</a></li>
             </ul>
             <div class="nav-btn">
-                <button>Get Early Access</button>
+                <button class="btn">Get Early Access</button>
             </div>
         </nav>
+
+        <section id="banner-section">
+            <div class="banner wid">
+                    <button class="head-btn"><i class="fa-regular fa-circle-dot"></i>Early Access Now Open</button>
+                <div class="banner-title">
+                    <h1>Structured Thinking,<br><span class="title-col">Not Just Note-Taking.</span></h1>
+                    <p>A private space to store notes, links, and learning summaries — designed to
+                        <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.
+                    </p>
+                </div>
+                <div class="banner-btn">
+                    <button class="btn-1">Start Building Your Vault<i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="btn-2"><i class="fa-solid fa-play"></i>See How It Works</button>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 
