--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,7 +34,7 @@
 
         <section id="banner-section">
             <div class="banner wid">
-                    <button class="head-btn"><i class="fa-regular fa-circle-dot"></i>Early Access Now Open</button>
+                <button class="head-btn"><i class="fa-regular fa-circle-dot"></i>Early Access Now Open</button>
                 <div class="banner-title">
                     <h1>Structured Thinking,<br><span class="title-col">Not Just Note-Taking.</span></h1>
                     <p>A private space to store notes, links, and learning summaries — designed to
@@ -46,6 +48,46 @@
             </div>
         </section>
     </header>
+    <div id="content-section">
+        <div class="first-content wid">
+            <div class="content-title">
+                <h2>Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+            <div class="content-cards">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/Vector.png" alt="vector logo">
+                    </div>
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/Vector.png" alt="vector logo">
+                    </div>
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/Vector.png" alt="vector logo">
+                    </div>
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/Vector.png" alt="vector logo">
+                    </div>
+                    <h3>Scattered notes</h3>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+            </div>
+        </div>
+        <div class="second-content"></div>
+        <div class="third-content"></div>
+    </div>
 </body>
 
 </html>
