Designed second content section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </div>
         </section>
     </header>
-    <div id="content-section">
+ <main>
+       <section id="content-section">
         <div class="first-content wid">
             <div class="content-title">
                 <h2>Notes don't fail, Structure does.</h2>
@@ -59,35 +60,67 @@
                     <div class="card-image">
                         <img src="assets/Vector.png" alt="vector logo">
                     </div>
-                    <h3>Scattered notes</h3>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <h3 class="content-head">Scattered notes</h3>
+                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="assets/Vector.png" alt="vector logo">
                     </div>
-                    <h3>Scattered notes</h3>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <h3 class="content-head">Scattered notes</h3>
+                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="assets/Vector.png" alt="vector logo">
                     </div>
-                    <h3>Scattered notes</h3>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <h3 class="content-head">Scattered notes</h3>
+                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="assets/Vector.png" alt="vector logo">
                     </div>
-                    <h3>Scattered notes</h3>
-                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    <h3 class="content-head">Scattered notes</h3>
+                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
                 </div>
             </div>
         </div>
-        <div class="second-content"></div>
-        <div class="third-content"></div>
-    </div>
+    </section>
+    <section id="cover-content">
+        <div class="cover wid">
+            <div class="cover-image">
+                <img src="assets/knowledge.png" alt="knowledge logo">
+            </div>
+
+            <div class="cover-contents">
+                <div class="cover-title">
+                    <p class="min-title">THE SOLUTION</p>
+                    <h2>Your Second Brain, Structured By Design.</h2>
+                    <p class="max-title">Personal Knowledge Vault isn't another note-taking app. z<br>It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
+                </div>
+                <div class="cover-list">
+                    <div class="list">
+                        <img src="assets/CheckCircle.png" alt="CheckCircle">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+                    <div class="list">
+                        <img src="assets/CheckCircle.png" alt="CheckCircle">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+                    <div class="list">
+                        <img src="assets/CheckCircle.png" alt="CheckCircle">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+                    <div class="list">
+                        <img src="assets/CheckCircle.png" alt="CheckCircle">
+                        <p>Capture ideas with structure built-in from day one</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+ </main>
 </body>
 
 </html>
