Designed last content section

--- a/index.html
+++ b/index.html
@@ -48,79 +48,95 @@
             </div>
         </section>
     </header>
- <main>
-       <section id="content-section">
-        <div class="first-content wid">
-            <div class="content-title">
-                <h2>Notes don't fail, Structure does.</h2>
-                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+    <main>
+        <section id="content-section">
+            <div class="first-content wid">
+                <div class="content-title">
+                    <h2>Notes don't fail, Structure does.</h2>
+                    <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+                </div>
+                <div class="content-cards">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/Vector.png" alt="vector logo">
+                        </div>
+                        <h3 class="content-head">Scattered notes</h3>
+                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/Vector.png" alt="vector logo">
+                        </div>
+                        <h3 class="content-head">Scattered notes</h3>
+                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/Vector.png" alt="vector logo">
+                        </div>
+                        <h3 class="content-head">Scattered notes</h3>
+                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="assets/Vector.png" alt="vector logo">
+                        </div>
+                        <h3 class="content-head">Scattered notes</h3>
+                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
             </div>
-            <div class="content-cards">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/Vector.png" alt="vector logo">
-                    </div>
-                    <h3 class="content-head">Scattered notes</h3>
-                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+        </section>
+        <section id="cover-content">
+            <div class="cover wid">
+                <div class="cover-image">
+                    <img src="assets/knowledge.png" alt="knowledge logo">
                 </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/Vector.png" alt="vector logo">
-                    </div>
-                    <h3 class="content-head">Scattered notes</h3>
-                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/Vector.png" alt="vector logo">
-                    </div>
-                    <h3 class="content-head">Scattered notes</h3>
-                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
-                </div>
-                <div class="card">
-                    <div class="card-image">
-                        <img src="assets/Vector.png" alt="vector logo">
-                    </div>
-                    <h3 class="content-head">Scattered notes</h3>
-                    <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="cover-content">
-        <div class="cover wid">
-            <div class="cover-image">
-                <img src="assets/knowledge.png" alt="knowledge logo">
-            </div>
 
-            <div class="cover-contents">
-                <div class="cover-title">
-                    <p class="min-title">THE SOLUTION</p>
-                    <h2>Your Second Brain, Structured By Design.</h2>
-                    <p class="max-title">Personal Knowledge Vault isn't another note-taking app. z<br>It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
-                </div>
-                <div class="cover-list">
-                    <div class="list">
-                        <img src="assets/CheckCircle.png" alt="CheckCircle">
-                        <p>Capture ideas with structure built-in from day one</p>
+                <div class="cover-contents">
+                    <div class="cover-title">
+                        <p class="min-title">THE SOLUTION</p>
+                        <h2>Your Second Brain, Structured By Design.</h2>
+                        <p class="max-title">Personal Knowledge Vault isn't another note-taking app. z<br>It's a
+                            thinking environment where every note, link, and summary<br>becomes part of an
+                            interconnected web of understanding.</p>
                     </div>
-                    <div class="list">
-                        <img src="assets/CheckCircle.png" alt="CheckCircle">
-                        <p>Capture ideas with structure built-in from day one</p>
-                    </div>
-                    <div class="list">
-                        <img src="assets/CheckCircle.png" alt="CheckCircle">
-                        <p>Capture ideas with structure built-in from day one</p>
-                    </div>
-                    <div class="list">
-                        <img src="assets/CheckCircle.png" alt="CheckCircle">
-                        <p>Capture ideas with structure built-in from day one</p>
+                    <div class="cover-list">
+                        <div class="list">
+                            <img src="assets/CheckCircle.png" alt="CheckCircle">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="list">
+                            <img src="assets/CheckCircle.png" alt="CheckCircle">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="list">
+                            <img src="assets/CheckCircle.png" alt="CheckCircle">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
+                        <div class="list">
+                            <img src="assets/CheckCircle.png" alt="CheckCircle">
+                            <p>Capture ideas with structure built-in from day one</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
- </main>
+        </section>
+        <section id="last-content">
+            <div class="container wid">
+                <div class="last-max-title">
+                    <h2>Ready To Think More Clearly?</h2>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+                </div>
+                <div class="last-content-btn">
+                    <button class="btn">Get Early Access</button>
+                </div>
+                <div class="last-para">
+                    <p>Free during early access • No credit card needed</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
