--- a/index.html
+++ b/index.html
@@ -137,6 +137,19 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="div1">
+            <div><img src="assets/logo-footer.png" alt="logo-footer"></div>
+            <div class="div1-icons">
+                 <p>Social Links</p><br>
+                 <i class="fa-brands fa-square-x-twitter"></i> <i class="fa-brands fa-linkedin"></i> <i class="fa-brands fa-square-facebook"></i>
+            </div>
+        </div>
+        <hr>
+        <div class="div2">
+            <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
