--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/Vector.png" alt="vector logo">
+                            <img src="assets/Bookmarks.png" alt="Bookmark logo">
                         </div>
-                        <h3 class="content-head">Scattered notes</h3>
-                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                        <h3 class="content-head">Bookmark overload</h3>
+                        <p class="content-para">Hundreds of saved links you'll never revisit or remember.</p>
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/Vector.png" alt="vector logo">
+                            <img src="assets/Brain.png" alt="vector logo">
                         </div>
-                        <h3 class="content-head">Scattered notes</h3>
-                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                        <h3 class="content-head">No idea connections</h3>
+                        <p class="content-para">Insights stay isolated, never building into bigger understanding.</p>
                     </div>
                     <div class="card">
                         <div class="card-image">
-                            <img src="assets/Vector.png" alt="vector logo">
+                            <img src="assets/Info.png" alt="vector logo">
                         </div>
-                        <h3 class="content-head">Scattered notes</h3>
-                        <p class="content-para">Your ideas live in 10 different apps, none of them connected.</p>
+                        <h3 class="content-head">Forgetting what you learned</h3>
+                        <p class="content-para">Knowledge fades because there's no system to retain it.</p>
                     </div>
                 </div>
             </div>
@@ -108,15 +108,15 @@
                         </div>
                         <div class="list">
                             <img src="assets/CheckCircle.png" alt="CheckCircle">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Connect related concepts automatically as you write</p>
                         </div>
                         <div class="list">
                             <img src="assets/CheckCircle.png" alt="CheckCircle">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Build lasting knowledge through reflection prompts</p>
                         </div>
                         <div class="list">
                             <img src="assets/CheckCircle.png" alt="CheckCircle">
-                            <p>Capture ideas with structure built-in from day one</p>
+                            <p>Find anything instantly with semantic search</p>
                         </div>
                     </div>
                 </div>
@@ -126,10 +126,11 @@
             <div class="container wid">
                 <div class="last-max-title">
                     <h2>Ready To Think More Clearly?</h2>
-                    <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+                    <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no
+                        credit card required.</p>
                 </div>
                 <div class="last-content-btn">
-                    <button class="btn">Get Early Access</button>
+                    <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
                 <div class="last-para">
                     <p>Free during early access • No credit card needed</p>
@@ -141,8 +142,9 @@
         <div class="div1">
             <div><img src="assets/logo-footer.png" alt="logo-footer"></div>
             <div class="div1-icons">
-                 <p>Social Links</p><br>
-                 <i class="fa-brands fa-square-x-twitter"></i> <i class="fa-brands fa-linkedin"></i> <i class="fa-brands fa-square-facebook"></i>
+                <p>Social Links</p><br>
+                <i class="fa-brands fa-square-x-twitter"></i> <i class="fa-brands fa-linkedin"></i> <i
+                    class="fa-brands fa-square-facebook"></i>
             </div>
         </div>
         <hr>
